--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.15.11",
-    "axios": "^1.3.5",
+    "@types/express": "^4.17.13",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "openai": "^3.2.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
