--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "author": "Ray Suelzer",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.15.11",
+    "@dqbd/tiktoken": "^1.0.4",
     "@types/express": "^4.17.13",
+    "@types/node": "^18.15.11",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
