--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 			"ES2020",
       "DOM"
 		],
-    "strict": true,
+    "strict": false,
     "esModuleInterop": true
   },
   "include": ["src/**/*.ts"],
